# soler

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.yaml  example.yaml
.github/workflows/: build.yml  codecov.yml  line.yml  rust.yml  test.yml
app/: Cargo.toml
app/src/: main.rs
chain/: Cargo.toml
chain/src/: lib.rs
chain/src/singer/: evm.rs
common/: Cargo.toml
config/: Cargo.toml
config/src/: base.rs  chain.rs  kafka.rs  lib.rs  main.rs  whitelist.rs
core/: Cargo.toml
core/src/: examples.rs  lib.rs  main.rs  print.rs  router.rs  serve.rs  validater.rs
core/src/apis/: mod.rs  router.rs
core/src/apis/auth/: jwt.rs  mod.rs
core/src/apis/handlers/: common.rs  form.rs
core/src/auth/: jwt.rs  mod.rs
core/src/handlers/: block.rs  body_parser.rs  common.rs  err.rs  form.rs  mod.rs  response.rs  state.rs  transaction.rs  user.rs
core/src/twitter/: api_v2.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: err.rs  lib.rs  main.rs  router.rs
crates/api/src/auth/: jwt.rs
crates/api/src/biz/: address.rs  block.rs  body_parser.rs  event.rs  helth.rs  mod.rs  response.rs  token.rs  token_transfer.rs  transaction.rs  user.rs
crates/api/src/checker/: addr.rs  base.rs
crates/api/src/handlers/: event.rs  mod.rs  token.rs  token_transfer.rs  transaction.rs
crates/api/src/middleware/: body_parser.rs  mod.rs
crates/chain-tools/: Cargo.toml
crates/chain-tools/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: consts.rs  lib.rs  macros.rs
crates/config/: Cargo.toml
crates/entities/: Cargo.toml
crates/entities/src/: account_api_plans.rs  account_custom_abis.rs  account_identities.rs  account_public_tags_requests.rs  account_tag_transactions.rs  address_current_token_balances.rs  address_tags.rs  address_to_tags.rs  address_token_balances.rs  addresses.rs  administrators.rs  block_rewards.rs  block_second_degree_relations.rs  last_fetched_counters.rs  mod.rs  pending_block_operations.rs  prelude.rs  schema_migrations.rs  smart_contracts.rs  smart_contracts_additional_sources.rs  token_instances.rs  token_transfer_token_id_migrator_progress.rs  token_transfers.rs  tokens.rs  transactions.rs  user_contacts.rs  users.rs  validators.rs  withdrawals.rs
crates/migration/: Cargo.toml
crates/repo/: Cargo.toml
crates/repo/src/dal/: address.rs  block.rs  current_token_balance.rs  event.rs  internal_transaction.rs  log_receiver_chain.rs  mod.rs  schema.sql  token.rs  token_balance.rs  token_transfer.rs  transaction.rs  user.rs  withdrawal.rs
crates/repo/src/orm/: conn.rs
crates/repo/tests/: mock.rs  prepare.rs
crates/scanner/: Cargo.toml  README.md
crates/scanner/src/: lib.rs  main.rs
crates/scanner/src/cache/: block_number.rs  log_receiver.rs  mod.rs
crates/scanner/src/common/: consts.rs  err.rs
crates/scanner/src/contracts/: balance_reader.rs  decode.rs  erc20.json  erc20.rs  mod.rs
crates/scanner/src/evms/: eth.rs
crates/scanner/src/handler/: address.rs  address_token_balance.rs  beneficiary.rs  block.rs  event.rs  inner_tx.rs  log_receiver.rs  mint_transfer.rs  mod.rs  token.rs  tokens.rs  transaction.rs  withdrawal.rs
crates/scanner/src/indexer/: mod.rs  token_balances.rs
crates/scanner/src/model/: events.rs
crates/scanner/src/tasks/: address.rs  block.rs  fetcher_token_balance.rs  mod.rs  publisher.rs  token.rs  total_supply.rs
crates/scanner/tests/: block_test.rs  mint_transfer_test.rs  receipt_test.rs  token_test.rs
crates/scanner/tests/data/blocks/: block_with_txdetails.json  recipts.json  trace_block.json  without_txdetails.json
crates/scanner/tests/data/receipts/: block_commit.json  erc20_deposit.json  erc20_mint.json  erc20_transfer.json
crates/scanner/tests/data/token_handler/: erc1155_batch.json  erc20.json  erc721.json  weth.json
docker/api/: Dockerfile
entities/: Cargo.toml
entities/src/: account_api_keys.rs  account_public_tags_requests.rs  account_tag_addresses.rs  account_watchlist_addresses.rs  account_watchlist_notifications.rs  account_watchlists.rs  address_coin_balances.rs  address_coin_balances_daily.rs  address_current_token_balances.rs  address_names.rs  address_tags.rs  blocks.rs  constants.rs  contract_methods.rs  contract_verification_status.rs  decompiled_smart_contracts.rs  emission_rewards.rs  event_notifications.rs  internal_transactions.rs  lib.rs  log_receiver_chain.rs  log_receiver_contract.rs  logs.rs  market_history.rs  missing_block_ranges.rs  prelude.rs  scanner_contract.rs  scanner_height.rs  sea_orm_active_enums.rs  transaction_actions.rs  transaction_forks.rs  transaction_stats.rs  transactions.rs  user.rs
entity/: Cargo.toml
learn/: Cargo.toml
learn/mastering/: Cargo.toml
learn/mastering/src/: lib.rs  main.rs
learn/mastering/src/chp01/: basic.rs  mod.rs  word_counter.rs
learn/mastering/src/chp02/: image_tool.rs  mod.rs
learn/mastering/src/iter/: iter.rs  primes.rs
learn/mastering/src/logic_gates/: logic_gates.rs
learn/mastering/src/sync/: channel.rs
learn/mastering/tests/: half_adder.rs
learn/src/: lib.rs  (+1 more)
meta/kafka/: Cargo.toml  config.yaml
meta/kafka/src/: consumer.rs  lib.rs  main.rs  producer.rs  utils.rs
meta/rpc/: Cargo.toml
meta/rpc/src/: example_impl.rs  lib.rs  main.rs  server.rs
migration/: Cargo.toml
mq/: Cargo.toml
repo/: Cargo.toml
repo/src/: lib.rs
repo/src/dal/: block.rs  contract.rs  event.rs  height.rs  internal_transaction.rs  mod.rs  token.rs  transaction.rs  user.rs
repo/src/orm/: conn.rs
repo/tests/: prepare.rs
scanner/: Cargo.toml
scanner/src/: cache.rs  lib.rs  main.rs
scanner/src/common/: consts.rs  mod.rs
scanner/src/contracts/: erc20.rs
scanner/src/evms/: eth.rs
scanner/src/handler/: address.rs  block.rs  contract.rs  event.rs  inner_tx.rs  internal_transaction.rs  mod.rs  sbt.rs  token.rs
scanner/src/model/: contract.rs  events.rs  height.rs  mod.rs
scanner/src/orm/: conn.rs  contract.rs  mod.rs  schema.sql
scanner/src/repo/: block_sacnner_schema.sql  log_receiver_contract.rs  mod.rs
scanner/src/sui/: chain.rs  event.rs  mod.rs
scanner/tests/: mock.rs  prepare.rs
(+36 files in other folders)
