[workspace]
members = [
  "chain",
  "config",
  "core",
  "entities",
  "meta/kafka",
  "meta/rpc",
  "migration",
  "mq",
  "repo",
  "scanner",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"                             # Remember to update .clippy.toml and README.md
license = "MIT OR Apache-2.0"
homepage = "https://github.com/traitmeta/soler"
repository = "https://github.com/traitmeta/soler"
exclude = [".github/"]

