[package]
name = "chain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
ethers = "0.17.0"
ethers-core = "0.17.0"
ethers-signers = "0.17.0"
rand = "0.8"
md5 = "0.7"
hex = "0.4"