[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
serde = { version = "1.0.158", features = ["derive", "rc"] }
serde_with = "2.3.1"
serde_yaml = "0.9.19"
tracing = "0.1.36"
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
git-version = "0.3.5"
const-str = "0.5.3"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "tracing-log"]}
