[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.5.13" }
hyper = "0.14"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["map-request-body", "util", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
http-body = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.29"
validator = { version = "0.16.0", features = ["derive"] }