[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = {version = "0.5.17", features = ["headers"]}
http-body = "0.4.3"
hyper = "0.14"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.29"
tokio = {version = "1.0", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.3", features = ["map-request-body", "util"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
validator = {version = "0.16.0", features = ["derive"]}
