[package]
name = "repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
migration = { path = "../migration" }
config = { path = "../config" }

tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1"

[dependencies.sea-orm]
features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print"]
version = "0.11.0"

[features]
mock = ["sea-orm/mock"]
