[package]
edition = "2021"
name = "scanner"
version = "0.1.0"

[dependencies]
entities = { path = "../entities" }
migration = { path = "../migration" }
repo = { path = "../repo" }
config = { path = "../config" }

anyhow = { version = "1" }
clap = "4.0.26"
ethers = "2.0.3"
hex = "0.4"
md5 = "0.7"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web3 = "0.19.0"
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui" }
move-core-types = { git = "https://github.com/MystenLabs/sui" }
futures-core = "0.3.21"
futures = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"

[dependencies.sea-orm]
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]
version = "0.12.2"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
