[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repo = { path = "../repo" }
entities = { path = "../entities" }
config = { path = "../config" }

anyhow = "1.0"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["headers"] }
clap = "4.4.6"
http-body = "0.4.5"
hyper = "0.14"
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
validator = { version = "0.16.0", features = ["derive"] }
twitter-v2 = "0.1.8"
time = "0.3.30"
hex = '0.4'
chrono = "0.4.31"
bigdecimal = { version = "0.3", features = ["serde"] }

[dependencies.sea-orm]
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]
version = "0.12.2"
