[package]
name = "chain-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
ethers-core = "2.0.3"
ethers-signers = "2.0.3"
rand = "0.8"
md5 = "0.7"
hex = "0.4"
bip39 = "2.0.0"
bitcoin = { version = "0.30.0", features = ["rand"] }
