[package]
name = "repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# soler-entities.workspace = true
entities = { path = "../entities" }
migration = { path = "../migration" }
config = { path = "../config" }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1"
chrono = "0.4.31"
bigdecimal = { version = "0.3", features = ["serde"] }

[dependencies.sea-orm]
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "with-bigdecimal",
]
version = "0.12.2"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
