[package]
name = "scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
entities = { path = "../entities" }
migration = { path = "../migration" }
repo = { path = "../repo" }
config = { path = "../config" }

anyhow = { version = "1" }
clap = "4.4.6"
ethers = { version = "2.0.10" }
hex = "0.4"
md5 = "0.7"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-core = "0.3.21"
futures = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
thiserror = "1.0"
bigdecimal = { version = "0.3", features = ["serde"] }

[dependencies.sea-orm]
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "with-bigdecimal",
]
version = "0.12.2"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
