[package]
name = "mastering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = '0.24.2'
serde_json = "1.0.81"
rand = "0.8.5"
hex = "0.4.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "sha3",
] }