[package]
edition = "2021"
name = "kafka"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
futures = "0.3"
tokio = "1.18.2"
rdkafka={version = "0.28",features = ["ssl", "sasl","cmake-build"]}

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"
