[package]
edition = "2021"
name = "kafka"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../crates/config" }

clap = "4.0.26"
futures = "0.3"
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", default-features = false }
tokio = { version = "1.19.2", features = ["full"] }
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
log = "0.4.8"
env_logger = "0.10.0"
chrono = "0.4.0"
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.4.0"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.1.6"
smol = "1.2.4"
