[package]
edition = "2021"
name = "rpc"
version = "0.1.0"

[dependencies]
anyhow = "1"
futures = "0.3"
hyper = "0.14.20"
jsonrpsee = {version = "0.15.1", features = ["full"]}
serde_json = {version = "1"}
tokio = {version = "1.16", features = ["full"]}
tokio-stream = {version = "0.1", features = ["sync"]}
tower = {version = "0.4.13", features = ["full"]}
tower-http = {version = "0.3.4", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.3", features = ["env-filter", "tracing-log"]}
